fix: overflow-x에 대한 scroll auto 설정

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -452,6 +452,6 @@ pre code {
   }
   pre {
     white-space: pre;
-    overflow-x: hidden;
+    overflow-x: auto;
   }
 }
